[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling implementation for LLMs"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
